--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,22 @@
-* { margin: 0; padding: 0; }
-html , body { width:100%; height:100%; }
-canvas { display: block; }
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700&display=swap");
+
+body {
+    font-family: var(--chakra-fonts-body);
+    color: var(--chakra-colors-neutral-700);
+    background: var(--chakra-colors-neutral-white);
+    transition-property: background-color;
+    transition-duration: var(--chakra-transition-duration-normal);
+    line-height: var(--chakra-lineHeights-base);
+}
+
+#glcanvas {
+    width: 50%;
+    height: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 30px;
+    object-fit: fill;
+    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
+}
