--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,8 @@ body {
 
 canvas.webgl {
     display: block;
-    width: 50%;
-    height: 50%;
+    width: 50% !important;
+    height: 50% !important;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -18,4 +18,44 @@ canvas.webgl {
     border-radius: 30px;
     object-fit: fill;
     box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
+
  }
+
+.container {
+  display: flex;
+}
+
+.color-box {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.color-button {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+
+}
+
+#buttonRed {
+  background-color: red;
+  color: white;
+}
+
+#buttonBlue {
+  background-color: blue;
+  color: white;
+}
+
+#buttonGreen {
+  background-color: green;
+  color: white;
+}
+
+#buttonYellow {
+  background-color: yellow;
+  color: black;
+}
